--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.3</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ojdbc6-11.2.0.3.jar</systemPath>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ojdbc6-11.2.0.3.jar</systemPath>
         </dependency>
 
         <dependency>
