add rest full for all entities

--- a/src/main/resources/mis_ofertas_api.config.properties
+++ b/src/main/resources/mis_ofertas_api.config.properties
@@ -11,7 +11,7 @@ jdbc.db=mis_ofertas
 jdbc.username=portafolio
 jdbc.password=portafolio
 jdbc.showsql=false
-jdbc.auto=create
+jdbc.auto=validate
 jdbc.sqlfile=sql/init.sql
 async-executor-pool-size=5
 async-scheduler-pool-size=10
